# shadow-scan

./: .gitignore  DAY_A2_STATUS.md  DAY_A3_STATUS.md  DAY_A4_STATUS.md  DAY_A5_STATUS.md  DAY_B1_STATUS.md  DAY_B2_STATUS.md  DAY_B3_STATUS.md  DAY_B4_STATUS.md  DAY_B5_STATUS.md  DAY_C1_STATUS.md  DAY_C2_STATUS.md  DAY_C3_STATUS.md  DAY_C4_STATUS.md  DAY_D1_STATUS.md  DAY_D2_STATUS.md  DAY_D3_STATUS.md  DEBUG_AUDIT.md  DEMO_1_RELEASE.md  README.md  REPAIR_STATUS.md  RUN_DEMO_1.md  SHIPPING_STATUS.md  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  rust-debugger.md  test-runner.md
.claude/hooks/: post-edit-check.ps1
.github/workflows/: check.yml  release.yml
scripts/: supervise.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/intel/: endpoints.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/audit/: scoring.rs
src-tauri/src/commands/: audit.rs  firewall.rs  mod.rs  network.rs  services.rs  system.rs
src-tauri/src/db/: schema.rs
src-tauri/src/dns/: resolver.rs
src-tauri/src/firewall/: rules.rs
src-tauri/src/intel/: endpoints.rs
src-tauri/src/monitors/: connections.rs  mod.rs  services.rs
src/components/: ActionRecommendations.tsx  RestorePanel.tsx  RiskGauge.tsx  ScoreDelta.tsx  ServiceDetail.tsx  Sidebar.tsx  TrendChart.tsx
src/hooks/: useAudit.ts  useConnectionMonitor.ts  useConnections.ts  useDbTest.ts  useDnsEnrichment.ts  useFirewallControl.ts  useKillSwitchLog.ts  useServiceControl.ts  useServices.ts  useSystemInfo.ts
src/screens/: AuditScreen.tsx  (+3 more)
(+5 files in other folders)
